--- a/v1/static/admin/config.yml
+++ b/v1/static/admin/config.yml
@@ -37,7 +37,9 @@ collections: # A list of collections the CMS should be able to edit
     create: true
     fields:
       - { label: "Title", name: "title", widget: "string" }
-      - { label: "Publish Date", name: "date", widget: "datetime" }
+      - { label: "Award Date", name: "date", widget: "datetime" }
+      - { label: "Image", name: "image", widget: "image" }
+      - { label: "Awarding Body", name: "awardingBody", widget: "string" }
       - { label: "Tags", name: "tags", widget: "list", required: false }
       - { label: "Body", name: "body", widget: "markdown" }
 
@@ -47,12 +49,49 @@ collections: # A list of collections the CMS should be able to edit
     create: true
     fields:
       - { label: "Name", name: "name", widget: "string" }
-      - { label: "Role", name: "role", widget: "string" }
-      - { label: "Image", name: "image", widget: "image" }
+      - { label: "Department", name: "department", widget: "string" }
+      - {
+          label: "Graduation Year",
+          name: "graduationYear",
+          widget: "number",
+          default: 2023,
+        }
+      - {
+          label: "Subteam Name",
+          name: "subteam",
+          widget: "string",
+          required: false,
+        }
+      - {
+          label: "Role",
+          name: "role",
+          widget: "select",
+          options: ["Member", "Head", "Vice Head", "Advisor", "Team Leader"],
+        }
+      - { label: "Profile Picture", name: "image", widget: "image" }
       - { label: "Bio", name: "bio", widget: "markdown" }
       - { label: "Tags", name: "tags", widget: "list", required: false }
-      - { label: "Social", name: "social", widget: "list", required: false }
-      - { label: "Body", name: "body", widget: "markdown" }
+      - label: "Socials"
+        name: "socials"
+        widget: "object"
+        required: false
+        fields:
+          - label: "Linkedin"
+            name: "linkedin"
+            required: false
+            widget: "string"
+          - label: "Facebook"
+            name: "facebook"
+            required: false
+            widget: "string"
+          - label: "Instagram"
+            name: "instagram"
+            required: false
+            widget: "string"
+          - label: "Twitter"
+            name: "twitter"
+            required: false
+            widget: "string"
 
   - name: "Sponsors"
     label: "Sponsors"
