--- a/v1/static/admin/config.yml
+++ b/v1/static/admin/config.yml
@@ -19,13 +19,14 @@ backend:
 
 media_folder: "static/images" # Folder where user uploaded files should go
 public_folder: "images"
-slug: "{{year}}-{{month}}-{{day}}"
+slug: "{{day}}-{{hour}}-{{minute}}-{{second}}"
 
 collections: # A list of collections the CMS should be able to edit
   - name: "News" # Used in routes, ie.: /admin/collections/:slug/edit
     label: "News" # Used in the UI, ie.: "New Post"
     folder: "v1/content/post" # The path to the folder where the documents are stored
     create: true # Allow users to create new documents in this collection
+    slug: "{{day}}-{{hour}}-{{minute}}-{{second}}" # Filename template, e.g., YYYY-MM-DD-title.md
     fields: # The fields each document in this collection have
       - {
           label: "Featured",
@@ -42,6 +43,7 @@ collections: # A list of collections the CMS should be able to edit
     label: "Cars"
     folder: "v1/content/cars"
     create: true
+    slug: "{{day}}-{{hour}}-{{minute}}-{{second}}"
     fields:
       - {
           label: "Featured",
@@ -95,6 +97,7 @@ collections: # A list of collections the CMS should be able to edit
     label: "Achievements"
     folder: "v1/content/achievements"
     create: true
+    slug: "{{day}}-{{hour}}-{{minute}}-{{second}}"
     fields:
       - {
           label: "Featured",
@@ -113,6 +116,7 @@ collections: # A list of collections the CMS should be able to edit
     label: "Team Members"
     folder: "v1/content/team"
     create: true
+    slug: "{{day}}-{{hour}}-{{minute}}-{{second}}"
     fields:
       - {
           label: "Featured",
@@ -169,6 +173,7 @@ collections: # A list of collections the CMS should be able to edit
     label: "Sponsors"
     folder: "v1/content/sponsors"
     create: true
+    slug: "{{day}}-{{hour}}-{{minute}}-{{second}}"
     fields:
       - {
           label: "Featured",
