--- a/v1/data/carousel/multipurpose.yaml
+++ b/v1/data/carousel/multipurpose.yaml
@@ -1,4 +1,4 @@
 weight: 1
-title: "Multipurpose responsive theme"
-description: "<p>Business. Corporate. Agency.<br>Portfolio. Blog. E-commerce.</p>"
+title: "The top eco-racing team in the MENA region"
+description: "<p>The best eco friendly cars.</p>"
 image: "img/carousel/template-homepage.png"
