--- a/v1/config.toml
+++ b/v1/config.toml
@@ -30,47 +30,52 @@ pluralizelisttitles = false
     weight     = 1
 
 [[menu.main]]
-    name       = "Blog"
-    identifier = "menu.blog"
-    url        = "/blog/"
+    identifier = "menu.achievements"
+    name       = "Achievements"
+    url        = "/achievements"
     weight     = 2
 
 [[menu.main]]
-    name       = "FAQ"
-    identifier = "menu.faq"
+    name       = "Cars"
+    identifier = "menu.cars"
     url        = "/faq/"
-    weight     = 6
+    weight     = 3
 
 [[menu.main]]
-    identifier = "contact"
+    name       = "News"
+    identifier = "menu.blog"
+    url        = "/blog/"
+    weight     = 4
+
+[[menu.main]]
+    identifier = "Contact"
     name       = "Contact"
     url        = "/contact/"
-    weight     = 7
-
+    weight     = 5
 
 # Top bar social links menu
 
 [[menu.topbar]]
-    weight = 1
+    weight = 3
     name = "Phone"
     url = "tel:+12 34 567 89 01"
-    pre = "<i class='fas fa-2x fa-phone'></i>"
+    pre = "<i class='fas fa-2x fa-phone-alt'></i>"
 
 
 [[menu.topbar]]
-    weight = 3
+    weight = 1
     name = "Facebook"
     url = "https://www.facebook.com/ShellEcoMarathonCUT"
-    pre = "<i class='fab fa-2x fa-facebook'></i>"
+    pre = "<i class='fab fa-2x fa-facebook-f'></i>"
 
 [[menu.topbar]]
-    weight = 4
+    weight = 2
     name = "Twitter"
     url = "https://twitter.com/CUEcoRacingTeam"
     pre = "<i class='fab fa-2x fa-twitter'></i>"
 
 [[menu.topbar]]
-    weight = 5
+    weight = 4
     name = "Email"
     url = "mailto:info@cu-eco.org"
     pre = "<i class='fas fa-2x fa-envelope'></i>"
@@ -132,7 +137,7 @@ pluralizelisttitles = false
     googleRecaptchaKey = "site_key_for_google_recaptcha"
 
     about_us = "<p> We are a group of students from Cairo University who are passionate about engineering and the environment. We are working on building a prototype of a fuel-efficient vehicle to compete in the Shell Eco-Marathon competition. </p>"
-    copyright = "Copyright (c) 2023 - 2024, CUERT; all rights reserved."
+    copyright = "Copyright (c) 2023 - 2024, CUERT; All Rights Reserved."
 
     # Format dates with Go's time formatting
     date_format = "January 2, 2006"
@@ -145,12 +150,12 @@ pluralizelisttitles = false
     logo = "img/logo.png"
     logo_small = "img/logo-small.png"
     contact_url = "/contact"
-    address = """<p class="text-uppercase"><strong>Cairo University</strong>
+    address = """<p>Cairo University
         <br>Cairo University Rd.
         <br>Giza
         <br>12613
         <br>
-        <strong>Egypt</strong>
+        Egypt
       </p>
       """
 
@@ -159,8 +164,8 @@ pluralizelisttitles = false
 
 # Enable or disable top bar with social icons
 [params.topbar]
-    enable = false
-    text = """<p class="hidden-sm hidden-xs">Contact us on +420 777 555 333 or hello@universal.com.</p>
+    enable = true
+    text = """<p class="hidden-sm hidden-xs">Contact us on +420 777 555 333 or info@cu-eco.org</p>
       <p class="hidden-md hidden-lg"><a href="tel:+420 777 555 333" data-animate-hover="pulse"><i class="fas fa-phone"></i></a>
       <a href="mailto:hello@universal.com" data-animate-hover="pulse"><i class="fas fa-envelope"></i></a>
       </p>
@@ -179,7 +184,7 @@ pluralizelisttitles = false
     pagination_speed = 1000
 
 [params.carouselTestimonials]
-    items = 4
+    items = 2
     auto_play = false
     slide_speed = 2000
     pagination_speed = 1000
@@ -188,13 +193,13 @@ pluralizelisttitles = false
     # All carousel items are defined in their own files. You can find example items
     # at 'exampleSite/data/carousel'.
     # For more information take a look at the README.
-    enable = true
+    enable = false
     auto_play = true
     slide_speed = 2000
     pagination_speed = 1000
 
 [params.features]
-    enable = true
+    enable = false
     cols = 3 # Default: 3, Available values 2,3,4,6
     # All features are defined in their own files. You can find example items
     # at 'exampleSite/data/features'.
@@ -205,23 +210,23 @@ pluralizelisttitles = false
     # All testimonials are defined in their own files. You can find example items
     # at 'exampleSite/data/testimonials'.
     # For more information take a look at the README.
-    title = "Testimonials"
-    subtitle = "We have worked with many clients and we always like to hear they come out from the cooperation happy and satisfied. Have a look what our clients said about us."
+    title = "Achievements"
+    subtitle = "We are many times winners of the first and second places in the international on & off-track awards powered by Shell Eco-Marathon."
 
 [params.see_more]
     enable = true
-    icon = "far fa-file-alt"
-    title = "Do you want to see more?"
-    subtitle = "We have prepared for you more than 40 different HTML pages, including 5 variations of homepage."
-    link_url = "#"
-    link_text = "Check other homepages"
+    icon = "far fa-handshake"
+    title = "Do you want to support us?"
+    subtitle = "Be one of our great sponsors, and help us to do more achievements."
+    link_url = "/contact"
+    link_text = "Contact"
 
 [params.clients]
     enable = true
     # All clients are defined in their own files. You can find example items
     # at 'exampleSite/data/clients'.
     # For more information take a look at the README.
-    title = "Our Clients"
+    title = "Sponsors"
     subtitle = ""
 
 [params.recent_posts]
@@ -231,7 +236,7 @@ pluralizelisttitles = false
     hide_summary = false
 
 [params.footer.recent_posts]
-    enable = true
+    enable = false
 
 [taxonomies]
   category = "categories"
