--- a/v1/static/admin/config.yml
+++ b/v1/static/admin/config.yml
@@ -52,16 +52,6 @@ collections: # A list of collections the CMS should be able to edit
       - { label: "Name", name: "name", widget: "string" }
       - { label: "Thumbnail", name: "thumbnail", widget: "image" }
       - {
-          label: "Images",
-          name: "images",
-          widget: "list",
-          fields:
-            [
-              { label: "Image", name: "image", widget: "image" },
-              { label: "Caption", name: "caption", widget: "string" },
-            ],
-        }
-      - {
           label: "Class",
           name: "class",
           widget: "select",
@@ -82,13 +72,19 @@ collections: # A list of collections the CMS should be able to edit
           required: false,
           fields:
             [
+              {
+                label: "Icon",
+                name: "icon",
+                widget: "select",
+                options: ["🏆 Trophy", "🌟 Award", "🥇 First", "🥈 Second", "🥉 Third"],
+                default: "🏆 Trophy",
+              },
               { label: "Year", name: "year", widget: "number" },
               { label: "Achievement", name: "achievement", widget: "string" },
               { label: "Image", name: "image", widget: "image" },
               { label: "Link", name: "link", widget: "string" },
             ],
         }
-      - { label: "Tags", name: "tags", widget: "list", required: false }
       - { label: "Body", name: "body", widget: "markdown" }
 
   - name: "Achievements"
