--- a/v1/data/clients/1.yaml
+++ b/v1/data/clients/1.yaml
@@ -1,3 +1,4 @@
-name: "customer-1"
-image: "img/clients/customer-1.png"
-url: "http://www.customer1.com"
+featured: true
+name: customer-1
+image: /v1/static/img/starbucks-logo.png
+url: http://www.customer1.com
