--- a/v1/config.toml
+++ b/v1/config.toml
@@ -190,9 +190,9 @@ pluralizelisttitles = false
     # All carousel items are defined in their own files. You can find example items
     # at 'exampleSite/data/carousel'.
     # For more information take a look at the README.
-    enable = false
+    enable = true
     auto_play = true
-    slide_speed = 2000
+    slide_speed = 6000
     pagination_speed = 1000
 
 [params.features]
