--- a/v1/data/carousel/multipurpose.yaml
+++ b/v1/data/carousel/multipurpose.yaml
@@ -1,4 +1,2 @@
 weight: 1
-title: "The top eco-racing team in the MENA region"
-description: "<p>The best eco friendly cars.</p>"
-image: "img/carousel/template-homepage.png"
+image: "img/carousel/page-1.jpg"
