--- a/v1/static/admin/config.yml
+++ b/v1/static/admin/config.yml
@@ -20,6 +20,18 @@ backend:
 media_folder: "v1/static/img" # Folder where user uploaded files should go
 
 collections: # A list of collections the CMS should be able to edit
+ -  label: "Slider",
+    name: "slider",
+    widget: "list",
+    folder: "v1/data/carousel"
+    extension: yaml
+    format: yaml
+    create: true
+    slug: "{{day}}-{{hour}}-{{minute}}-{{name}}"
+    fields:
+      - { label: "Weight", name: "weight", widget: "number"  }
+      - { label: "Image", name: "image", widget: "image" }
+
   - name: "News" # Used in routes, ie.: /admin/collections/:slug/edit
     label: "News" # Used in the UI, ie.: "New Post"
     folder: "v1/content/blog" # The path to the folder where the documents are stored
@@ -105,64 +117,64 @@ collections: # A list of collections the CMS should be able to edit
       - { label: "Title", name: "title", widget: "string" }
       - { label: "Award Date", name: "date", widget: "date" }
       - { label: "Image", name: "image", widget: "image" }
+    
       - { label: "Body", name: "awardingBody", widget: "string" }
-
-  - name: "Team Members"
-    label: "Team Members"
-    folder: "v1/content/team"
-    create: true
-    slug: "{{day}}-{{hour}}-{{minute}}-{{name}}"
-    fields:
-      - {
-          label: "Featured",
-          name: "featured",
-          widget: "boolean",
-          default = false,
-        }
-      - { label: "Name", name: "name", widget: "string" }
-      - { label: "Department", name: "department", widget: "string" }
-      - {
-          label: "Graduation Year",
-          name: "graduationYear",
-          widget: "number",
-          default: 2023,
-        }
-      - {
-          label: "Subteam Name",
-          name: "subteam",
-          widget: "string",
-          required: false,
-        }
-      - {
-          label: "Role",
-          name: "role",
-          widget: "select",
-          options: ["Member", "Head", "Vice Head", "Advisor", "Team Leader"],
-        }
-      - { label: "Profile Picture", name: "image", widget: "image" }
-      - { label: "Bio", name: "bio", widget: "markdown" }
-      - { label: "Tags", name: "tags", widget: "list", required: false }
-      - label: "Socials"
-        name: "socials"
-        widget: "object"
-        required: false
-        fields:
-          - label: "Linkedin"
-            name: "linkedin"
-            required: false
-            widget: "string"
-          - label: "Facebook"
-            name: "facebook"
-            required: false
-            widget: "string"
-          - label: "Instagram"
-            name: "instagram"
-            required: false
-            widget: "string"
-          - label: "Twitter"
-            name: "twitter"
-            required: false
-            widget: "string"
+#  - name: "Team Members"
+#    label: "Team Members"
+#    folder: "v1/content/team"
+#    create: true
+#    slug: "{{day}}-{{hour}}-{{minute}}-{{name}}"
+#    fields:
+#      - {
+#          label: "Featured",
+#          name: "featured",
+#          widget: "boolean",
+#          default = false,
+#        }
+#      - { label: "Name", name: "name", widget: "string" }
+#      - { label: "Department", name: "department", widget: "string" }
+#      - {
+#          label: "Graduation Year",
+#          name: "graduationYear",
+#          widget: "number",
+#          default: 2023,
+#        }
+#      - {
+#          label: "Subteam Name",
+#          name: "subteam",
+#          widget: "string",
+#          required: false,
+#        }
+#      - {
+#          label: "Role",
+##          name: "role",
+#          widget: "select",
+#          options: ["Member", "Head", "Vice Head", "Advisor", "Team Leader"],
+#        }
+#      - { label: "Profile Picture", name: "image", widget: "image" }
+#      - { label: "Bio", name: "bio", widget: "markdown" }
+#      - { label: "Tags", name: "tags", widget: "list", required: false }
+#     - label: "Socials"
+#        name: "socials"
+#        widget: "object"
+#        required: false
+#        fields:
+#          - label: "Linkedin"
+#            name: "linkedin"
+#            required: false
+#            widget: "string"
+#          - label: "Facebook"
+#            name: "facebook"
+#            required: false
+#            widget: "string"
+#          - label: "Instagram"
+#            name: "instagram"
+#            required: false
+#            widget: "string"
+#          - label: "Twitter"
+#            name: "twitter"
+#            required: false
+#            widget: "string"
 
   - name: "Sponsors"
     label: "Sponsors"
