--- a/v1/config.toml
+++ b/v1/config.toml
@@ -6,7 +6,7 @@ languageCode = "en-us"
 # Site language. Available translations in the theme's `/i18n` directory.
 defaultContentLanguage = "en"
 # Enable comments by entering your Disqus shortname
-disqusShortname = "devcows"  
+disqusShortname = ""  
 # Enable Google Analytics by entering your tracking code
 googleAnalytics = ""
 
@@ -83,7 +83,7 @@ pluralizelisttitles = false
 [params]
     viewMorePostLink = "/blog/"
     author = "CUERT"
-    defaultKeywords = ["devcows", "hugo", "go"]
+    defaultKeywords = []
     newsSection = ["blog"]
     mainSections = ["blog","achievements","cars"]
     defaultDescription = "Cairo University Eco-Racing Team is a group of students from Cairo University who are passionate about engineering and the environment. We are working on building a prototype of a fuel-efficient vehicle to compete in the Shell Eco-Marathon competition."
@@ -176,15 +176,15 @@ pluralizelisttitles = false
 
 [params.carouselCustomers]
     items = 6
-    auto_play = false
-    slide_speed = 2000
+    auto_play = true
+    slide_speed = 1000
     pagination_speed = 1000
 
 [params.carouselTestimonials]
-    items = 2
-    auto_play = false
-    slide_speed = 2000
-    pagination_speed = 1000
+    items = 3
+    auto_play = true
+    slide_speed = 1000
+    pagination_speed = 500
 
 [params.carouselHomepage]
     # All carousel items are defined in their own files. You can find example items
@@ -212,8 +212,8 @@ pluralizelisttitles = false
 
 [params.see_more]
     enable = true
-    icon = "far fa-handshake"
-    title = "Do you want to support us?"
+    icon = "far fa-heart"
+    title = "Want to support us?"
     subtitle = "Be one of our great sponsors, and help us to do more achievements."
     link_url = "/contact"
     link_text = "Contact"
