Update Sponsors “01-11-09-new”

--- a/v1/data/clients/01-11-09-new.yaml
+++ b/v1/data/clients/01-11-09-new.yaml
@@ -1,4 +1,4 @@
 featured: true
-name: New
-image: /v1/static/img/starbucks-logo.png
-url: https://example.com
+name: The United Bank
+image: /v1/static/img/1.png
+url: https://www.theubeg.com/
