--- a/v1/data/testimonials/03-15-18-first-team-in-mena-region.yaml
+++ b/v1/data/testimonials/03-15-18-first-team-in-mena-region.yaml
@@ -1,5 +1,5 @@
 featured: false
 title: First team in MENA region
-date: 2018-07-19T16:15:50.484Z
+date: 2018-07-19
 image: /v1/static/img/30688520_1040285942776188_241482693676630016_n.jpg
 awardingBody: "to design and implement a carbon fiber chassis "
