--- a/v1/data/testimonials/03-15-24-safety-award.yaml
+++ b/v1/data/testimonials/03-15-24-safety-award.yaml
@@ -1,6 +1,6 @@
 featured: false
 title: Safety award
-date: 2019-08-13T16:19:35.570Z
+date: 2019-08-13
 image: /v1/static/img/64452097_1351321361672643_2556500448819281920_n.jpg
 awardingBody: "won the safety award for our highly disciplined rules in our
   workshop and for taking the safety precautions in each time we work in our
