Update Achievements “03-15-25-highest-record-in-the-middle-east”

--- a/v1/data/testimonials/03-15-25-highest-record-in-the-middle-east.yaml
+++ b/v1/data/testimonials/03-15-25-highest-record-in-the-middle-east.yaml
@@ -1,5 +1,5 @@
 featured: false
 title: Highest record in the middle east
-date: 2023-09-03T15:24:41.642Z
+date: 2023-09-03
 image: /v1/static/img/60203340_2387192848178622_6003228153584025600_n.jpg
 awardingBody: for an electric car
