--- a/v1/data/testimonials/03-15-39-second-place.yaml
+++ b/v1/data/testimonials/03-15-39-second-place.yaml
@@ -1,5 +1,5 @@
 featured: false
 title: Second place
-date: 2022-07-14T16:38:27.447Z
+date: 2022-07-14
 image: /v1/static/img/89435974_1595108270627283_383473539388276736_n.jpg
 awardingBody: in the communication awaard
