--- a/v1/config.toml
+++ b/v1/config.toml
@@ -8,7 +8,7 @@ defaultContentLanguage = "en"
 # Enable comments by entering your Disqus shortname
 disqusShortname = ""  
 # Enable Google Analytics by entering your tracking code
-googleAnalytics = ""
+googleAnalytics = "G-9M30T8FNS6"
 
 # number of words of summarized post content (default 70)
 summaryLength = 70
