Update Achievements “03-15-40-second-place”

--- a/v1/data/testimonials/03-15-40-second-place.yaml
+++ b/v1/data/testimonials/03-15-40-second-place.yaml
@@ -3,3 +3,4 @@ title: Second place
 date: 2022-07-15
 image: /v1/static/img/74459822_1468454933292618_2145505386063462400_n.jpg
 awardingBody: in simulate to innovate award
+weight: 40
