Update Achievements “03-15-39-second-place”

--- a/v1/data/testimonials/03-15-39-second-place.yaml
+++ b/v1/data/testimonials/03-15-39-second-place.yaml
@@ -3,3 +3,4 @@ title: Second place
 date: 2022-07-14
 image: /v1/static/img/89435974_1595108270627283_383473539388276736_n.jpg
 awardingBody: in the communication awaard
+weight: 40
