--- a/v1/data/testimonials/03-15-35-fifth-place.yaml
+++ b/v1/data/testimonials/03-15-35-fifth-place.yaml
@@ -3,3 +3,4 @@ title: Fifth place
 date: 2021-06-29
 image: /v1/static/img/85043513_1569617863176324_4314030624307412992_n.jpg
 awardingBody: "in the autonomous car worldwide competition "
+weight: 40
