Update Achievements “03-15-33-simulate-to-innovate-award”

--- a/v1/data/testimonials/03-15-33-simulate-to-innovate-award.yaml
+++ b/v1/data/testimonials/03-15-33-simulate-to-innovate-award.yaml
@@ -4,3 +4,4 @@ date: 2021-06-25
 image: /v1/static/img/88183190_1590400171098093_766109976765661184_n.jpg
 awardingBody: We won the first place in the off-track award which requires the
   newest innovation among the participated teams
+weight: 40
