Update Achievements “03-15-33-second-place”

--- a/v1/data/testimonials/03-15-33-second-place.yaml
+++ b/v1/data/testimonials/03-15-33-second-place.yaml
@@ -3,3 +3,4 @@ title: Second place
 date: 2021-06-24
 image: /v1/static/img/118748040_1756958967775545_7948632638624093880_n.jpg
 awardingBody: in communication award
+weight: 40
