--- a/v1/data/testimonials/03-15-24-safety-award.yaml
+++ b/v1/data/testimonials/03-15-24-safety-award.yaml
@@ -5,3 +5,4 @@ image: /v1/static/img/64452097_1351321361672643_2556500448819281920_n.jpg
 awardingBody: "won the safety award for our highly disciplined rules in our
   workshop and for taking the safety precautions in each time we work in our
   work shop "
+weight: 40
